--- a/recyclerview-extension/src/main/res/values/strings.xml
+++ b/recyclerview-extension/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="multi_type_load_success">加载完成</string>
     <string name="multi_type_loading">正在加载中...</string>
     <string name="multi_type_load_end">- 没有更多了哦 -</string>
+    <string name="multi_type_empty">空空如也</string>
 </resources>
